WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208027
WebIDBServer resume should return early if suspend does not happen
https://bugs.webkit.org/show_bug.cgi?id=208027
Summary
WebIDBServer resume should return early if suspend does not happen
Sihui Liu
Reported
2020-02-20 13:02:54 PST
<
rdar://problem/59617654
>
Attachments
Patch
(1.46 KB, patch)
2020-02-20 13:06 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.42 KB, patch)
2020-02-20 15:32 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-02-20 13:06:20 PST
Created
attachment 391323
[details]
Patch
Geoffrey Garen
Comment 2
2020-02-20 15:17:53 PST
Comment on
attachment 391323
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391323&action=review
r=me
> Source/WebKit/NetworkProcess/IndexedDB/WebIDBServer.cpp:106 > + // Lock is not held by suspend.
I'm not sure this comment adds information. I guess this change was motivated by a crash unlocking. But it will always be true that we do not want to resume if we did not suspend, regardless of what logic or behavior follows this check; the check is not particular to the lock.
Sihui Liu
Comment 3
2020-02-20 15:32:56 PST
Created
attachment 391342
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2020-02-20 16:20:16 PST
Comment on
attachment 391342
[details]
Patch for landing Clearing flags on attachment: 391342 Committed
r257103
: <
https://trac.webkit.org/changeset/257103
>
WebKit Commit Bot
Comment 5
2020-02-20 16:20:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug