Cherry-pick r257103. rdar://problem/59676894

WebIDBServer resume should return early if suspend does not happen
    https://bugs.webkit.org/show_bug.cgi?id=208027
    <rdar://problem/59617654>

    Reviewed by Geoffrey Garen.

    We should not try releasing a lock that is not held.

    * NetworkProcess/IndexedDB/WebIDBServer.cpp:
    (WebKit::WebIDBServer::resume):

    Canonical link: https://commits.webkit.org/221008@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257103 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.404@safari-609.1.20.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.20.0-branch@257249 268f45cc-cd09-0410-ab3c-d52691b4dbfc